--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,8 +1,8 @@
 #bar a{color:white;}
 #bar a:hover{color:green;}
 #lnt a{color:black;}
-#lnt a:hover{color:white;background-color:#333;transition-duration:.2s;}
+#lnt a:hover{color:white;background-color:#333;transition-duration:.2s;-webkit-transition:.2s;}
 #select1{line-height:36px;}
 #selectA{text-decoration:none;}
 #selectA div{padding-left:12px;}
-#select1:hover{color:white;background-color:#333;transition-duration:.2s;}
+#select1:hover{color:white;background-color:#333;transition-duration:.2s;-webkit-transition:.2s;}
